2019-03-30  Niibe Yutaka  <gniibe@fsij.org>

	* contrib/usart-stm32f103.c (usart_config_brr): New.
	(usart_config_re): New internal function.
	(handle_intr, handle_tx_ready): Use TC for smartcard.
	(usart_wait_write_completion): New internal function.
	(usart_write): Support half-duplex smartcard mode.

2019-03-29  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/usart-stm32f103.c (usart_read_ext): New.
	(usart_read_prepare_poll): New.

2019-03-02  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.14.
	* doc/chopstx.texi (VERSION): 1.14.

2019-03-01  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/usart-stm32f103.c (usart_config): Fix SCEN setting
	procedure.

2019-03-01  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/usart-stm32f103.c (usart_config): Support parity error
	interrupt setting.
	(usart_init): Don't call usart_config here.
	* example-usb-serial/sample.c: It's application calling
	usart_config.

2019-02-28  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/usart.h (BSCARD): New.
	* contrib/usart-stm32f103.c (BSCARD): Baudrate for smartcard.
	(usart_config_clken): New.
	(usart_config): Fix for MODE_SMARTCARD.

	* board/board-st-nucleo-f103.h: Define pins for smartcard
	interface.

2019-02-21  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/usart.h (MODE_SMARTCARD, MODE_IRDA, MODE_IRDA_LP)
	(MASK_MODE): New.

	* contrib/usart-stm32f103.c (usart_config): Add support for
	those modes.

2018-12-19  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.13.
	* doc/chopstx.texi (VERSION): 1.13.

2018-12-08  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_timer_dequeue): Fix calculation of return value.

2018-12-07  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx.c (chx_timer_dequeue): Return ticks remained.
	(chx_wakeup, chopstx_mutex_lock): Use return value of
	chx_timer_dequeue.
	(chx_snooze): Update *USEC_P, accordingly.

2018-11-12  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.12.
	* doc/chopstx.texi (VERSION): 1.12.

	* contrib/ackbtn-stm32f103.c (ackbtn_init): Support FST-01 and