@@ -77,3 +77,8 @@ void usart_config_brr (uint8_t dev_no, uint16_t brr_value);
 
 void usart_read_prepare_poll (uint8_t dev_no, chopstx_poll_cond_t *poll_desc);
 int usart_read_ext (uint8_t dev_no, char *buf, uint16_t buflen, uint32_t *timeout_p);
+
+void usart_init0 (int (*cb) (uint8_t dev_no, uint16_t notify_bits));
+int usart_block_sendrecv (uint8_t dev_no, const char *s_buf, uint16_t s_buflen,
+			  char *r_buf, uint16_t r_buflen,
+			  uint32_t *timeout_block_p, uint32_t timeout_char);
